--- a/src/app/home/danh-sach-phim/danh-sach-phim.component.html
+++ b/src/app/home/danh-sach-phim/danh-sach-phim.component.html
@@ -1,3 +1,12 @@
-<p>
-  danh-sach-phim works!
-</p>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-3" *ngFor="let item of danhSachPhim">
+
+      <!-- item phim component -->
+      <app-item-phim [phim]="item"></app-item-phim>
+
+    </div>
+  </div>
+
+</div>
