--- a/src/app/home/form/dang-ky/dang-ky.component.html
+++ b/src/app/home/form/dang-ky/dang-ky.component.html
@@ -1,3 +1,26 @@
-<p>
-  dang-ky works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6 mx-auto">
+      <form action="">
+        <div class="form-group">
+          <label>Tài khoản</label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="form-group">
+          <label>Mật khẩu</label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="form-group">
+          <label>Email</label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="form-group">
+          <label>Số điện thoại</label>
+          <input type="text" class="form-control">
+        </div>
+
+        <button type="button" class="btn btn-success">Đăng ký</button>
+      </form>
+    </div>
+  </div>
+</div>
