--- a/src/app/home/form/dang-nhap/dang-nhap.component.html
+++ b/src/app/home/form/dang-nhap/dang-nhap.component.html
@@ -1,3 +1,29 @@
-<p>
-  dang-nhap works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6 mx-auto">
+        <!-- <mat-checkbox>Check me!</mat-checkbox> -->
+
+      <form action="" #formDangNhap="ngForm">
+        <!-- <form action="" #formDangKy="ngForm" (ngSubmit)="DangKy(formDangKy.value)"> -->
+        <div class="form-group">
+          <label>Tài khoản</label>
+          <!-- <input type="text" class="form-control" name="taiKhoan" [(ngModel)]="taiKhoan"> -->
+          <input type="text" class="form-control" minlength="7" maxlength="15" #taikhoan="ngModel" name="taiKhoan"
+            ngModel required>
+
+        </div>
+
+        <div class="form-group">
+          <label>Mật khẩu</label>
+          <input type="text" class="form-control" name="matKhau" ngModel>
+        </div>
+
+
+        <button type="submit" class="btn btn-success" (click)="DangNhap(formDangNhap.value)">
+          Đăng nhập
+        </button>
+        <button type="submit" class="btn btn-danger m-5">Cancel</button>
+      </form>
+    </div>
+  </div>
+</div>
