--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,10 @@
         <a class="nav-link" routerLink="/home/danh-sach-phim">Danh sách phim</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/home/form">Form</a>
+        <a class="nav-link" routerLink="/home/form">Đăng ký</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/home/form/dang-nhap">Đăng nhập</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/home/tin-tuc">Tin tức</a>
