--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,6 +23,9 @@
         <a class="nav-link" routerLink="/home/form/dang-nhap">Đăng nhập</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="/home/pipe">Pipes</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/home/tin-tuc">Tin tức</a>
       </li>
 
