--- a/src/app/home/danh-sach-phim/item-phim/item-phim.component.html
+++ b/src/app/home/danh-sach-phim/item-phim/item-phim.component.html
@@ -16,8 +16,10 @@
     [queryParams]="{maPhim: phim.MaPhim, tenPhim: phim.TenPhim}">Mua vé</a> -->
 
     <button class="btn btn-primary" (click)="muaVe()" >Mua vé</button>
+    <button class="btn btn-danger mx-2" data-toggle="modal" data-target="#myModal" (click)="xemNhanh()" >Xem nhanh</button>
 
 
   </div>
 </div>
 <!-- End item -->
+
