--- a/src/app/home/form/dang-ky/dang-ky.component.html
+++ b/src/app/home/form/dang-ky/dang-ky.component.html
@@ -56,7 +56,7 @@
         <button type="submit" class="btn btn-success" (click)="DangKy(formDangKy.value)">
           Đăng ký
         </button>
-        <button type="submit" class="btn btn-danger m-5">Cancel</button>
+        <button type="submit" class="btn btn-danger mx-2">Cancel</button>
       </form>
     </div>
   </div>
